--- a/index.html
+++ b/index.html
@@ -4,36 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Google Fonts links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+        <!-- Modern Normalize link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+    <!-- Own styles link -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
-         <ul>
-            <li>
-                <a href="">Studio</a>
+    <header class="page-header">
+        <nav class="page-nav">
+            <a class="logo" href="./index.html"><span class="text-blue">Web</span>Studio</a>
+         <ul class="nav-list">
+            <li class="nav-list-item" >
+                <a class="nav-list-link" href="">Studio</a>
             </li>
-            <li>
-                <a href="">Portfolio</a>
+            <li class="nav-list-item">
+                <a class="nav-list-link" href="">Portfolio</a>
             </li>
-            <li>
-                <a href="">Contacts</a>
+            <li class="nav-list-item">
+                <a class="nav-list-link" href="">Contacts</a>
             </li>
          </ul>
        </nav>
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                     <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
+        <section class="hero">
             <h1>Effective Solutions
             for Your Business</h1>
             <button type="button">Order Service</button>
@@ -138,8 +148,7 @@
                     <h3>Meditation App</h3>
                     <p>App</p>
                 </li>
-            </ul>
-            <ul>
+            
                 <li>
                     <img src="./images/taxi_service.jpg"
                      alt="Taxi Service"
@@ -172,7 +181,7 @@
 
     </main>
     <footer>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"><span class="text-blue">Web</span>Studio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
