--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <!-- Page Header -->
     <header class="page-header">
         <nav class="page-nav">
-            <a class="logo" href="./index.html"><span class="text-blue">Web</span>Studio</a>
+            <a class="logo" href="./index.html">Web<span class="logo-text">Studio</span></a>
          <ul class="nav-list">
             <li class="nav-list-item" >
-                <a class="nav-list-link" href="">Studio</a>
+                <a class="nav-list-link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list-item">
                 <a class="nav-list-link" href="">Portfolio</a>
@@ -32,7 +32,7 @@
             </li>
          </ul>
        </nav>
-        <address>
+        <address class="contacts-studio">
             <ul>
                 <li>
                     <a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -77,7 +77,7 @@
             
         </section>
         <!--Team Section -->
-        <section>
+        <section class="team-section">
             <h2 class="section-title">Our Team</h2>
             <ul class="team-list">
                 <li class="team-list-item">
@@ -186,7 +186,7 @@
 
     </main>
     <footer class="page-footer">
-        <a class="logo-footer" href="./index.html"><span class="text-blue">Web</span>Studio</a>
+        <a class="logo-footer" href="./index.html">Web<span class="logo-footer-text">Studio</span></a>
         <p class="page-footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
